--- a/template/WebContent/css/style.css
+++ b/template/WebContent/css/style.css
@@ -1,5 +1,25 @@
 @charset "UTF-8";
 
+/*コンテナ*/
+.container{
+	height: auto;
+}
+/*ヘッダー*/
+.top-menu{
+	width:100%;
+}
+.toplist{
+    width: 50%;
+    margin: 0 auto;
+    
+}
+.toplist li{
+	float:left;
+	list-style:none;
+	padding: 0px 10px;
+}
+
+
 /* ========TAG LAYOUT======== */
 body {
 	margin:0;
@@ -71,20 +91,28 @@ a:hover{
 #header {
 	width: 100%;
 	height: 80px;
-	background-color: black;
 }
 #main {
     width: 50%;
-    height: 500px;
     text-align: center;
     margin: 0 auto;
 }
 
-#footer {
-	width: 100%;
-	height: 80px;
-	background-color: black;
-	clear:both;
+.header-logo {
+    color: #a1885d;
+    text-align: center;
+    letter-spacing: 7.2px;
+    font-size: 30px;
+}
+footer {
+    width: 100%;
+    height: 40px;
+    background-color: #a1885d;
+    clear: both;
+    text-align: center;
+    color: #ffffff;
+    padding: 20px 0;
+    margin-top: 60px;
 }
 		
 		
