--- a/template/WebContent/news.html
+++ b/template/WebContent/news.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link href="css/style.css" rel="stylesheet" type="text/css" media="screen" />
 <link rel="stylesheet" type="text/css" href="./css/basis_style.css">
 <title>新着情報</title>
 </head>
@@ -9,7 +10,7 @@
 
 <div class="news">
 <br>
-<span>2018/02/15 新商品を追加しました</span><br>
+<p>2018/02/15 新商品を追加しました</p>
 <p>2018/02/05 問合せページを公開しました</p>
 <p>2018/02/01 ホームページを開設しました</p>
 <br>
